fixed spacing for the grid items

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -274,6 +274,11 @@ body {
 .projects {
   height: 110vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
+
 }
 
 .projects-title{
@@ -281,16 +286,16 @@ body {
 }
 
 .projects-wrapper { 
-  width: 100%;
+  width: 90%;
   height: 70%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 2em;
+  gap: 1%;
+
 }
 
 .project-container {
   display: flex;
-  /* align-items: center; */
   justify-content: center;
   color: var(--black);
   background-color: var(--white);
